crates/zizmor/tests/integration/snapshots/integration__snapshot__template_injection-13.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/issue-883-repro/action.yml\")).run()?"
snapshot_kind: text
---
note[template-injection]: code injection via template expansion
  --> @@INPUT@@:32:7
   |
32 |       - name: Create chango fragment
   |         ---------------------------- note: this step
33 |         id: create-chango-fragment
...
38 |         with:
39 | /         script: |
40 | |           import base64
...  |
92 | |             set_output("change_note_content", "")
93 | |             set_output("change_note_path", "")
   | |______________________________________________- note: inputs.pyproject-toml may expand into attacker-controllable code
   |
   = note: audit confidence → Low

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:32:7
   |
32 |       - name: Create chango fragment
   |         ---------------------------- help: this step
33 |         id: create-chango-fragment
...
38 |         with:
39 | /         script: |
40 | |           import base64
...  |
92 | |             set_output("change_note_content", "")
93 | |             set_output("change_note_path", "")
   | |______________________________________________- help: env.CUSTOM_OUTPUT may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:32:7
   |
32 |       - name: Create chango fragment
   |         ---------------------------- help: this step
33 |         id: create-chango-fragment
...
38 |         with:
39 | /         script: |
40 | |           import base64
...  |
92 | |             set_output("change_note_content", "")
93 | |             set_output("change_note_path", "")
   | |______________________________________________- help: env.DEFAULT_OUTPUT may expand into attacker-controllable code
   |
   = note: audit confidence → High

note[template-injection]: code injection via template expansion
  --> @@INPUT@@:32:7
   |
32 |       - name: Create chango fragment
   |         ---------------------------- note: this step
33 |         id: create-chango-fragment
...
38 |         with:
39 | /         script: |
40 | |           import base64
...  |
92 | |             set_output("change_note_content", "")
93 | |             set_output("change_note_path", "")
   | |______________________________________________- note: inputs.data may expand into attacker-controllable code
   |
   = note: audit confidence → Low

error[template-injection]: code injection via template expansion
  --> @@INPUT@@:32:7
   |
32 |       - name: Create chango fragment
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this step
33 |         id: create-chango-fragment
...
38 |         with:
39 | /         script: |
40 | |           import base64
...  |
92 | |             set_output("change_note_content", "")
93 | |             set_output("change_note_path", "")
   | |______________________________________________^ github.event may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
   --> @@INPUT@@:95:7
    |
 95 |       - name: Set Job Summary
    |         --------------------- help: this step
 96 |         id: job-summary
...
105 |         with:
106 | /         script: |
107 | |           import base64
...   |
122 | |           set_summary(text)
123 | |           error("Chango fragment should be updated. See the job summary for details.")
    | |_______________________________________________________________________________________- help: env.CHANGE_NOTE_PATH may expand into attacker-controllable code
    |
    = note: audit confidence → High

help[template-injection]: code injection via template expansion
   --> @@INPUT@@:95:7
    |
 95 |       - name: Set Job Summary
    |         --------------------- help: this step
 96 |         id: job-summary
...
105 |         with:
106 | /         script: |
107 | |           import base64
...   |
122 | |           set_summary(text)
123 | |           error("Chango fragment should be updated. See the job summary for details.")
    | |_______________________________________________________________________________________- help: env.CHANGE_NOTE_CONTENT may expand into attacker-controllable code
    |
    = note: audit confidence → High

14 findings (7 suppressed): 2 unknown, 0 informational, 4 low, 0 medium, 1 high
